--- a/Doctor-app/src/main/resources/application.properties
+++ b/Doctor-app/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=akshith
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-#spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.properties.hibernate.format_sql=false
