--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 jwt.secret=MjanETTsvLeoVWEQoTxFhwFQrTG/q+Tw5U0wBnyRUD4=
+spring.main.allow-circular-references=false
