--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 jwt.secret=MjanETTsvLeoVWEQoTxFhwFQrTG/q+Tw5U0wBnyRUD4=
 #spring.main.allow-circular-references=false
+logging.level.org.springframework.security=DEBUG
